[metadata]
name = pyjds
version = attr:pyjds.__version__
author = nma
author_email = nma@jai.com
description = JAI python binding for eBUS SDK
long_description = 
url = https://jai.com
# license = MIT
python_requires='>=3.8',

[options]
zip_safe = False
packages = find:
install_requires = numpy
include_package_data = True
[options.package_data]
* = pyjds.conf